[package]
name = "click"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse-rs = "0.4.2"
eframe = "0.18.0"
egui_hotkey = "0.1.1"
mki = "0.2.1"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
app_dirs2 = "2.4.0"
