[package]
name = "click"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
# panic = "abort"
opt-level = "z"

[dependencies]
mouse-rs = "0.4.2"
eframe = "0.18.0"
egui_hotkey = "0.1.1"
mki_fork = "0.2.1"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
app_dirs2 = "2.4.0"
